Results images for thresholding in. Images shuffled about as directory was getting crowded. Section on test uncertainties in.

--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -54,7 +54,7 @@ In the case of super resolution two (or more) images are taken such that the tra
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/super_resolution.png}
+	\includegraphics[width=0.8\textwidth]{images/background/super_resolution.png}
     \caption{Many low resolution images are aligned to sub-pixel accuracy. Adapted from \cite{superresolution2}}
     \label{fig:superresolution}
 \end{figure}
@@ -192,7 +192,7 @@ Consider the task of trying to fit a line to some data which contains both corre
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.4\textwidth]{images/ransac.png}
+	\includegraphics[width=0.4\textwidth]{images/background/ransac.png}
     \caption{Inliers are shown in blue, outliers shown in red. From \cite{ransac:image}}
     \label{fig:ransac}
 \end{figure}
@@ -253,7 +253,7 @@ The process is easier to visualize in 2D (marching squares), see Figure~\ref{fig
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/marching_squares.jpg}
+	\includegraphics[width=0.8\textwidth]{images/background/marching_squares.jpg}
     \caption{Using marching squares to extract a shape. From \cite{marching_squares:image}}
     \label{fig:marching_squares}
 \end{figure}
@@ -282,7 +282,7 @@ To get an idea of what is possible with visualization techniques here are some e
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/error_bars.png}
+	\includegraphics[width=0.8\textwidth]{images/background/error_bars.png}
     \caption{Left: Error Bar, Right: Box and Whisker Plot. From \cite{uncertaintyoverview}}
     \label{fig:error_bars}
 \end{figure}
@@ -291,7 +291,7 @@ Error bars are possibly the simplest form of uncertainty visualization possible 
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/heatmap.png}
+	\includegraphics[width=0.8\textwidth]{images/background/heatmap.png}
     \caption{An example heatmap. From \cite{heatmap}}
     \label{fig:heatmap}
 \end{figure}
@@ -304,7 +304,7 @@ In particular a team at the Vienna University of Technology have written a paper
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/flicker.png}
+	\includegraphics[width=0.8\textwidth]{images/background/flicker.png}
     \caption{The three frames show a molecule being highlighted as it flickers. From \cite{attractiveflicker}}
     \label{fig:flicker}
 \end{figure}
@@ -322,7 +322,7 @@ One part of the project that there wasn't time to explore was Another aspect of 
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=0.8\textwidth]{images/labels.png}
+	\includegraphics[width=0.8\textwidth]{images/background/labels.png}
     \caption{A number of different labelling techniques have been studied. Adapted from \cite{labelling}}
     \label{fig:labels}
 \end{figure}
