--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -77,6 +77,7 @@
 \titlespacing\subsection{0pt}{0pt}{0pt}
 
 % Shiny Pictures
+\usepackage{float}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -99,6 +100,9 @@
 \usepackage{etoolbox}
 
 \usepackage{textcase}
+
+% Frame
+\include{xcolor}
 
 \begin{document}
 
